--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -70,6 +70,7 @@ production stylesheet in assets/built/screen.css
     --color-secondary-text: rgb(0 0 0 / 0.5);
     --color-border: rgb(0 0 0 / 0.08);
     --color-dark-border: rgb(0 0 0 / 0.5);
+    --background-color: #fff;
     --font-sans: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     --font-sans-title: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     --font-serif: "EB Garamond", Georgia, Times, serif;
@@ -504,6 +505,14 @@ button.gh-form-input {
         [main-start] var(--main) [main-end]
         var(--wide) [wide-end]
         var(--full) [full-end];
+}
+
+.kg-signup-card-heading {
+
+}
+
+.kg-signup-card-subheading {
+    font-weight: 400 !important;
 }
 
 .kg-signup-card-disclaimer {
